my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EFMTARGN/T_EFMTARGN-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_EFMTARGN_STRUCT_H
#define T_EFMTARGN_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_EFMTARGN(void);


#endif /* not T_EFMTARGN_STRUCT_H */
